[package]
name = "processforlinux"
version = "0.1.0"
edition = "2021"
authors = ["timochan <i@timochan.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.9.1"
reqwest = "0.11"
serde_json = "1.0"
dbus = "0.7.1"
tokio = { version = "1", features = ["full"] }
