[package]
name = "processforlinux"
version = "1.1.2"
edition = "2021"
authors = ["timochan <i@timochan.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
regex = "1.10.2"
reqwest = "0.13"
serde_json = "1.0"
dbus = "0.7.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"

[profile.release]
panic = 'abort'
